--- a/private.html
+++ b/private.html
@@ -6,316 +6,228 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fail Muat Turun O2024</title>
 
-  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- CryptoJS for MD5 hashing -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
   <style>
-    :root{
-      --bg:#0f1724;
-      --panel:#0b1117;
-      --accent:#00d084;
-      --muted: #9aa7b2;
-    }
     body {
-      background: radial-gradient( circle at 10% 10%, rgba(0,208,132,0.06), transparent 10%),
-                  radial-gradient( circle at 90% 90%, rgba(0,208,132,0.03), transparent 10%),
-                  linear-gradient(180deg, #071024 0%, var(--bg) 100%);
-      color: #e6eef3;
-      min-height:100vh;
-      font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:40px 20px;
-    }
-    .card-panel{
-      width:100%;
-      max-width:820px;
-      background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-      border: 1px solid rgba(255,255,255,0.04);
-      padding:36px;
-      border-radius:12px;
-      box-shadow: 0 10px 40px rgba(2,6,23,0.6), inset 0 1px 0 rgba(255,255,255,0.02);
+      background: radial-gradient(circle at 20% 20%, #0f2027, #203a43, #2c5364);
+      color: #e6e6e6;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: "Poppins", sans-serif;
     }
 
-    .muted { color: var(--muted); }
-    .accent { color: var(--accent); }
-
-    .hidden { display:none !important; }
-
-    input#password-input {
-      background: rgba(255,255,255,0.03);
-      border: 1px solid rgba(255,255,255,0.04);
-      color: #eaf6ee;
-      padding: 12px 16px;
-      border-radius:8px;
+    .container-box {
+      background: rgba(0, 0, 0, 0.6);
+      border: 1px solid #00ffcc33;
+      box-shadow: 0 0 30px #00ffaa22;
+      border-radius: 15px;
+      padding: 40px;
+      max-width: 600px;
+      width: 100%;
+      backdrop-filter: blur(5px);
     }
 
-    .btn-accent {
-      background: linear-gradient(90deg, var(--accent), #00b36b);
+    h1, h2 {
+      color: #00ffcc;
+    }
+
+    .form-control {
+      background: #0e1a1f;
+      color: #00ffc3;
+      border: 1px solid #00ffc355;
+    }
+
+    .form-control:focus {
+      border-color: #00ffc3;
+      box-shadow: 0 0 10px #00ffc322;
+    }
+
+    .btn-success {
+      background-color: #00bfa6;
       border: none;
-      color: #04101a;
-      font-weight:700;
     }
 
-    .file-list a { 
-      color: #071018;
-      text-decoration:none;
+    .btn-success:hover {
+      background-color: #00e6b8;
+      box-shadow: 0 0 10px #00e6b833;
     }
 
-    .small-muted { color: rgba(230,238,243,0.6); }
-
-    .lock-timer { font-weight:700; color:#ff6b6b; }
-
-    /* subtle matrix/hack vibe */
-    .matrix {
-      font-family: "Courier New", Courier, monospace;
-      font-size: 12px;
-      color: rgba(0,208,132,0.35);
-      letter-spacing: 0.6px;
+    .hidden {
+      display: none !important;
     }
 
-    @media (max-width:560px){
-      .card-panel{ padding:20px; }
-      input#password-input { width:100% !important; }
+    a.list-group-item {
+      background: #0e1a1f;
+      color: #e6e6e6;
+      border-color: #00ffc344;
+      transition: 0.2s;
+    }
+
+    a.list-group-item:hover {
+      background: #00ffc322;
+      color: #00ffc3;
+    }
+
+    .timer {
+      color: #ff4d4d;
+      font-weight: bold;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
-  <div class="card-panel">
-    <div id="password-section" class="text-center">
-      <h2 class="fw-bold mb-1">🔒 Akses Terhad</h2>
-      <p class="muted small-muted">Masukkan kata laluan untuk muat turun fail. (Halaman ini tidak diindeks.)</p>
 
+  <div class="container-box text-center">
+    
+    <!-- Password Prompt -->
+    <div id="password-section">
+      <h2 class="fw-bold mb-3">🔒 Akses Terhad</h2>
+      <p class="text-muted">Masukkan kata laluan untuk mengakses fail.</p>
       <div class="d-flex justify-content-center mt-4">
-        <input type="password" id="password-input" class="form-control w-50" placeholder="Masukkan kata laluan" autofocus>
+        <input type="password" id="password-input" class="form-control w-75" placeholder="Masukkan kata laluan">
       </div>
-
-      <div class="d-flex justify-content-center gap-2 mt-3">
-        <button id="btn-enter" class="btn btn-accent">Masuk</button>
-        <button id="btn-help" class="btn btn-outline-light" onclick="openWhatsApp()">Hubungi Admin</button>
-      </div>
-
-      <p id="error-msg" class="text-danger mt-3 mb-0"></p>
-      <p id="info-msg" class="muted mt-2"></p>
-
-      <div class="mt-3 text-start matrix small-muted" id="attempt-log" style="display:none;">
-        <!-- optional debug/attempt info -->
-      </div>
+      <button class="btn btn-success mt-3" onclick="checkPassword()">Masuk</button>
+      <p id="error-msg" class="text-danger mt-3"></p>
+      <p id="lock-msg" class="text-warning mt-3"></p>
+      <div id="countdown" class="timer"></div>
     </div>
 
+    <!-- Download Section -->
     <div id="download-section" class="hidden text-center">
-      <h1 class="fw-bold accent mb-3">📂 Muat Turun Fail O2024</h1>
-      <p class="small-muted mb-3">Klik untuk muat turun terus dari laman ini.</p>
+      <h1 class="fw-bold text-success mb-4">📂 Muat Turun Fail O2024</h1>
+      <p class="text-muted mb-4">Klik fail di bawah untuk muat turun terus.</p>
 
-      <div class="list-group shadow-sm text-start mx-auto file-list" style="max-width:700px;">
-        <a href="o2024/configuration.xml" download class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-          XML Config in cmd <span class="badge bg-secondary">XML</span>
+      <div class="list-group shadow-sm text-start mx-auto" style="max-width:600px;">
+        <a href="o2024/configuration.xml" download class="list-group-item list-group-item-action">
+          <i class="bi bi-filetype-xml text-info"></i> configuration.xml
         </a>
-        <a href="o2024/activation-code-run-in-powershell.txt" download class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-          Activation Powershell <span class="badge bg-secondary">TXT</span>
+        <a href="o2024/activation-code-run-in-powershell.txt" download class="list-group-item list-group-item-action">
+          <i class="bi bi-terminal text-light"></i> activation-code-run-in-powershell.txt
         </a>
-        <a href="o2024/run-configuration-using-this-code-first.txt" download class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-          To run XML <span class="badge bg-secondary">TXT</span>
+        <a href="o2024/run-configuration-using-this-code-first.txt" download class="list-group-item list-group-item-action">
+          <i class="bi bi-code-slash text-warning"></i> run-configuration-using-this-code-first.txt
         </a>
-        <a href="o2024/setup.exe" download class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-          setup <span class="badge bg-secondary">EXE</span>
+        <a href="o2024/setup.exe" download class="list-group-item list-group-item-action">
+          <i class="bi bi-gear-fill text-danger"></i> setup.exe
         </a>
       </div>
 
-      <div class="mt-4">
-        <button class="btn btn-outline-danger" onclick="logout()">Log Keluar</button>
-      </div>
+      <button class="btn btn-outline-danger mt-4" onclick="logout()">Log Keluar</button>
     </div>
   </div>
 
-<script>
-/*
-  Client-side rate-limit (Option 1)
-  - MAX_ATTEMPTS: allowed failed tries before lock
-  - LOCK_MINUTES: lock duration in minutes
-  - STORED_HASH: MD5 hash of the correct password (change as needed)
-*/
-const MAX_ATTEMPTS = 3;
-const LOCK_MINUTES = 5;
+  <!-- MD5 Library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.19.0/js/md5.min.js"></script>
 
-// === Change this to MD5 of your password ===
-const STORED_HASH = "f0d6b6a66b27f3d0f7d2b6b4c3a5b2ea"; 
+  <script>
+    // HASH CONFIG
+    const CORRECT_HASH = "2f1cc65fcd7ac85e14459c45d4d9d18a"; // 
+    const MAX_ATTEMPTS = 3;
+    const LOCK_BASE_MINUTES = 1;
+    const LOCK_MAX_MINUTES = 60 * 24;
 
-const LS_ATT_KEY = "o2024_attempts";
-const LS_LOCK_KEY = "o2024_lockUntil";
-const AUTH_KEY = "o2024_auth";
-
-const passInput = document.getElementById('password-input');
-const btnEnter = document.getElementById('btn-enter');
-const errorMsg = document.getElementById('error-msg');
-const infoMsg = document.getElementById('info-msg');
-const attemptLog = document.getElementById('attempt-log');
-
-btnEnter.addEventListener('click', checkPassword);
-
-// allow Enter key to submit
-passInput.addEventListener('keydown', function(e){
-  if (e.key === 'Enter') {
-    e.preventDefault();
-    btnEnter.click();
-  }
-});
-
-// on load restore state
-window.addEventListener('load', function(){
-  // if already authorized in this session, show downloads
-  if (sessionStorage.getItem(AUTH_KEY) === "true") {
-    showDownloadSection();
-    return;
-  }
-
-  updateStatusMessage();
-  renderAttemptLog();
-});
-
-// MAIN check function
-function checkPassword(){
-  clearMessages();
-
-  // check lock first
-  const now = Date.now();
-  const lockUntil = parseInt(localStorage.getItem(LS_LOCK_KEY) || "0", 10);
-  if (now < lockUntil) {
-    const seconds = Math.ceil((lockUntil - now)/1000);
-    errorMsg.textContent = `🚫 Ciri dikunci. Cuba lagi selepas ${formatSeconds(seconds)}.`;
-    updateLockCountdown();
-    return;
-  }
-
-  const val = passInput.value || "";
-  if (!val.trim()) {
-    errorMsg.textContent = "Sila masukkan kata laluan.";
-    return;
-  }
-
-  // compute MD5 of input
-  const hashed = CryptoJS.MD5(val.trim()).toString();
-
-  if (hashed === STORED_HASH) {
-    // success
-    sessionStorage.setItem(AUTH_KEY, "true");
-    clearAttempts();
-    showDownloadSection();
-    return;
-  }
-
-  // fail
-  recordFailedAttempt();
-}
-
-// helpers
-function clearMessages(){
-  errorMsg.textContent = "";
-  infoMsg.textContent = "";
-}
-
-function showDownloadSection(){
-  document.getElementById('password-section').classList.add('hidden');
-  document.getElementById('download-section').classList.remove('hidden');
-}
-
-function logout(){
-  sessionStorage.removeItem(AUTH_KEY);
-  // optionally do not clear attempts so user still limited
-  location.reload();
-}
-
-function recordFailedAttempt(){
-  let attempts = parseInt(localStorage.getItem(LS_ATT_KEY) || "0", 10);
-  attempts += 1;
-  localStorage.setItem(LS_ATT_KEY, attempts.toString());
-
-  if (attempts >= MAX_ATTEMPTS) {
-    const lockUntil = Date.now() + LOCK_MINUTES * 60 * 1000;
-    localStorage.setItem(LS_LOCK_KEY, lockUntil.toString());
-    errorMsg.textContent = `❌ Terlalu banyak cubaan. Ciri dikunci selama ${LOCK_MINUTES} minit. Jika anda pelanggan sah, <a href="#" onclick="openWhatsApp();return false;">hubungi admin</a>.`;
-    updateLockCountdown();
-  } else {
-    errorMsg.innerHTML = `❌ Kata laluan salah. Percubaan ${attempts}/${MAX_ATTEMPTS}.`;
-    infoMsg.innerHTML = `<small class="muted">Jika anda pelanggan sah, cuba semak WhatsApp kami jika perlukan bantuan.</small>`;
-  }
-  renderAttemptLog();
-}
-
-function clearAttempts(){
-  localStorage.removeItem(LS_ATT_KEY);
-  localStorage.removeItem(LS_LOCK_KEY);
-  renderAttemptLog();
-}
-
-function updateStatusMessage(){
-  const now = Date.now();
-  const lockUntil = parseInt(localStorage.getItem(LS_LOCK_KEY) || "0", 10);
-  if (now < lockUntil) {
-    updateLockCountdown();
-  } else {
-    const attempts = parseInt(localStorage.getItem(LS_ATT_KEY) || "0", 10);
-    if (attempts > 0) {
-      infoMsg.textContent = `Percubaan salah: ${attempts}/${MAX_ATTEMPTS}. Selepas ${MAX_ATTEMPTS} cubaan, ciri akan dikunci ${LOCK_MINUTES} min.`;
-    } else {
-      infoMsg.textContent = "";
+    function getLockData() {
+      return JSON.parse(localStorage.getItem("lockData") || "{}");
     }
-  }
-}
 
-// show live countdown while locked
-let lockTimerInterval = null;
-function updateLockCountdown(){
-  if (lockTimerInterval) clearInterval(lockTimerInterval);
-  lockTimerInterval = setInterval(()=> {
-    const now = Date.now();
-    const lockUntil = parseInt(localStorage.getItem(LS_LOCK_KEY) || "0", 10);
-    if (now >= lockUntil) {
-      clearInterval(lockTimerInterval);
-      localStorage.removeItem(LS_LOCK_KEY);
-      localStorage.removeItem(LS_ATT_KEY);
-      errorMsg.textContent = "";
-      infoMsg.textContent = "🔓 Kunci dibuka. Sila cuba semula.";
-      renderAttemptLog();
-      return;
+    function setLockData(data) {
+      localStorage.setItem("lockData", JSON.stringify(data));
     }
-    const seconds = Math.ceil((lockUntil - now)/1000);
-    errorMsg.textContent = `🚫 Dikunci — cuba lagi dalam ${formatSeconds(seconds)}.`;
-  }, 500);
-}
 
-function formatSeconds(sec){
-  if (sec <= 60) return `${sec}s`;
-  const m = Math.floor(sec/60);
-  const s = sec % 60;
-  return `${m}m ${s}s`;
-}
+    function playBeep() {
+      try {
+        const ctx = new (window.AudioContext || window.webkitAudioContext)();
+        const osc = ctx.createOscillator();
+        const gain = ctx.createGain();
+        osc.type = "square";
+        osc.frequency.value = 400;
+        gain.gain.value = 0.1;
+        osc.connect(gain);
+        gain.connect(ctx.destination);
+        osc.start();
+        setTimeout(() => {
+          osc.stop();
+          ctx.close();
+        }, 150);
+      } catch (e) {
+        console.warn("AudioContext tidak disokong.");
+      }
+    }
 
-// debug small log (hidden by default), helpful when testing
-function renderAttemptLog(){
-  const attempts = parseInt(localStorage.getItem(LS_ATT_KEY) || "0", 10);
-  const lockUntil = parseInt(localStorage.getItem(LS_LOCK_KEY) || "0", 10);
-  if (attempts === 0 && lockUntil === 0) {
-    attemptLog.style.display = "none";
-    attemptLog.innerText = "";
-    return;
-  }
-  attemptLog.style.display = "block";
-  attemptLog.innerHTML = `localStorage: attempts=${attempts} | lockUntil=${ lockUntil ? new Date(lockUntil).toLocaleString() : 'none' }`;
-}
+    function startCountdown(until) {
+      const countdown = document.getElementById("countdown");
+      const interval = setInterval(() => {
+        const now = Date.now();
+        if (now >= until) {
+          countdown.textContent = "";
+          clearInterval(interval);
+          localStorage.removeItem("lockData");
+          document.getElementById("lock-msg").textContent = "✅ Akses telah dibuka semula. Cuba lagi sekarang.";
+          return;
+        }
+        const diff = Math.ceil((until - now) / 1000);
+        const mins = Math.floor(diff / 60);
+        const secs = diff % 60;
+        countdown.textContent = `⌛ Cuba lagi dalam ${mins}m ${secs}s`;
+      }, 1000);
+    }
 
-// open whatsapp prefilled
-function openWhatsApp(){
-  const wa = "https://wa.me/601111943110?text=Hai%2C+saya+perlukan+akses+fail+O2024.+Boleh+bantu%3F";
-  window.open(wa, "_blank");
-}
-</script>
+    function checkPassword() {
+      const input = document.getElementById("password-input").value;
+      const hash = md5(input.trim());
+      const errorMsg = document.getElementById("error-msg");
+      const lockMsg = document.getElementById("lock-msg");
+      const countdown = document.getElementById("countdown");
+      let data = getLockData();
+      const now = Date.now();
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+      if (data.lockUntil && now < data.lockUntil) {
+        const unlockTime = new Date(data.lockUntil).toLocaleString();
+        lockMsg.textContent = `🚫 Akaun dikunci. Cuba semula pada ${unlockTime}.`;
+        startCountdown(data.lockUntil);
+        return;
+      }
+
+      if (hash === CORRECT_HASH) {
+        document.getElementById("password-section").classList.add("hidden");
+        document.getElementById("download-section").classList.remove("hidden");
+        sessionStorage.setItem("auth", "true");
+        localStorage.removeItem("lockData");
+      } else {
+        playBeep();
+        data.attempts = (data.attempts || 0) + 1;
+        if (data.attempts >= MAX_ATTEMPTS) {
+          const duration = Math.min(LOCK_BASE_MINUTES * Math.pow(2, data.attempts - MAX_ATTEMPTS), LOCK_MAX_MINUTES);
+          data.lockUntil = now + duration * 60000;
+          errorMsg.textContent = "";
+          lockMsg.textContent = `❌ Terlalu banyak percubaan. Akaun dikunci selama ${duration} minit.`;
+          startCountdown(data.lockUntil);
+        } else {
+          errorMsg.textContent = `❌ Kata laluan salah. Percubaan ${data.attempts}/${MAX_ATTEMPTS}.`;
+        }
+        setLockData(data);
+      }
+    }
+
+    function logout() {
+      sessionStorage.removeItem("auth");
+      location.reload();
+    }
+
+    document.getElementById("password-input").addEventListener("keydown", e => {
+      if (e.key === "Enter") checkPassword();
+    });
+
+    window.onload = () => {
+      if (sessionStorage.getItem("auth") === "true") {
+        document.getElementById("password-section").classList.add("hidden");
+        document.getElementById("download-section").classList.remove("hidden");
+      }
+    };
+  </script>
 </body>
 </html>
