--- a/pran.html
+++ b/pran.html
@@ -2,181 +2,130 @@
 <html lang="ms">
 <head>
   <meta charset="UTF-8">
-  <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PRAN x KOPUSAMAJU Sabah Berhad — Katalog & Akaun</title>
-
-  <!-- Favicon -->
-  <link rel="icon" href="https://images.seeklogo.com/logo-png/25/1/pran-logo-png_seeklogo-258211.png" sizes="32x32">
-  <link rel="apple-touch-icon" href="https://images.seeklogo.com/logo-png/25/1/pran-logo-png_seeklogo-258211.png">
-
-  <!-- Bootstrap -->
+  <meta name="robots" content="noindex, nofollow">
+  <title>Kopusamaju Sabah Berhad | Ejen Rasmi PRAN</title>
+  <link rel="icon" href="https://images.seeklogo.com/logo-png/25/1/pran-logo-png_seeklogo-258211.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
   <style>
     body {
-      background: linear-gradient(180deg, #700000 0%, #300000 100%);
-      color: #fff8e6;
-      font-family: "Inter", ui-sans-serif, system-ui;
-      -webkit-font-smoothing: antialiased;
-      min-height: 100vh;
+      background: linear-gradient(180deg, #7a0000 0%, #3a0000 100%);
+      color: #fff;
+      font-family: "Poppins", sans-serif;
     }
-
-    .panel {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 200, 0, 0.3);
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.6);
-      border-radius: 16px;
-      padding: 2rem;
+    header {
+      background-color: #b40000;
+      color: white;
+      padding: 1rem 0;
+      text-align: center;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.3);
     }
-
-    .accent {
-      color: #ffcc00;
+    header img {
+      height: 70px;
+      margin-bottom: 10px;
     }
-
-    .pdf-viewer iframe,
-    .pdf-viewer object {
-      width: 100%;
-      height: 85vh;
-      border: none;
+    .pdf-viewer {
+      border: 2px solid #ffcc00;
       border-radius: 8px;
-      background-color: #000;
+      overflow: hidden;
+      background: #fff;
+      height: 85vh;
     }
-
-    .section-title {
-      border-bottom: 2px solid rgba(255, 200, 0, 0.3);
-      padding-bottom: 0.5rem;
-      margin-bottom: 1.5rem;
-      color: #ffcc00;
-      font-weight: 700;
-      letter-spacing: 1px;
-    }
-
-    .btn-pran {
-      background-color: #ff0000;
+    .pdf-viewer iframe {
+      width: 100%;
+      height: 100%;
       border: none;
-      color: #fff;
-      font-weight: 600;
-      transition: 0.3s;
-      border-radius: 6px;
     }
-
-    .btn-pran:hover {
-      background-color: #cc0000;
+    footer {
+      background-color: #b40000;
       color: #fff;
+      text-align: center;
+      padding: 20px 10px;
+      font-size: 0.9rem;
+      margin-top: 40px;
     }
-
     .btn-whatsapp {
       background-color: #25d366;
-      color: #fff;
       border: none;
-      font-weight: 600;
-      border-radius: 6px;
-      transition: 0.3s;
     }
-
     .btn-whatsapp:hover {
-      background-color: #1ebd58;
-      color: #fff;
-    }
-
-    footer {
-      color: #ffcc00;
-      opacity: 0.9;
-      font-size: 0.9rem;
-      margin-top: 2rem;
-    }
-
-    /* Decorative background grid */
-    .matrix {
-      pointer-events: none;
-      position: fixed;
-      inset: 0;
-      z-index: 0;
-      background-image:
-        linear-gradient(transparent 50%, rgba(255,255,0,0.04) 50%),
-        linear-gradient(90deg, transparent 50%, rgba(255,255,0,0.04) 50%);
-      background-size: 2px 40px, 40px 2px;
-      opacity: 0.08;
-      animation: matrixMove 6s linear infinite;
-    }
-
-    @keyframes matrixMove {
-      0% { background-position: 0 0, 0 0; }
-      100% { background-position: 0 40px, 40px 0; }
-    }
-
-    @media (max-width: 767px) {
-      .pdf-viewer iframe,
-      .pdf-viewer object {
-        height: 70vh;
-      }
+      background-color: #1da851;
     }
   </style>
 </head>
 <body>
-  <div class="matrix"></div>
+  <header>
+    <img src="https://images.seeklogo.com/logo-png/25/1/pran-logo-png_seeklogo-258211.png" alt="PRAN Logo">
+    <h2 class="fw-bold mb-0">Kopusamaju Sabah Berhad</h2>
+    <p class="mb-0">Ejen Rasmi Produk PRAN</p>
+  </header>
 
-  <div class="container py-5" style="position: relative; z-index: 2;">
-    <div class="row justify-content-center">
-      <div class="col-lg-10">
-        <div class="panel text-center">
-          <img src="https://images.seeklogo.com/logo-png/25/1/pran-logo-png_seeklogo-258211.png" 
-               alt="PRAN Logo" class="mb-3" style="height:80px;">
-          <h1 class="fw-bold accent">Produk PRAN — KOPUSAMAJU Sabah Berhad</h1>
-          <p class="text-light mb-4">Laman rasmi untuk pelanggan PRAN berdaftar melalui 
-            <strong>KOPUSAMAJU Sabah Berhad</strong><br>
-            Ejen rasmi: <strong>Ahmad Amsari</strong></p>
+  <main class="container py-5 text-center">
+    <h3 class="fw-bold mb-4 text-warning">📘 Katalog Produk PRAN</h3>
+    <p class="text-light mb-4">Lihat katalog penuh produk PRAN yang diedarkan oleh Kopusamaju Sabah Berhad.  
+      Muat turun atau lihat terus dari peranti anda.</p>
 
-          <!-- Section: Katalog -->
-          <div class="text-start mt-5">
-            <h3 class="section-title">📘 Katalog Produk PRAN</h3>
-            <div class="pdf-viewer mb-3">
-              <object data="catalog.pdf" type="application/pdf">
-                <p class="text-light text-center">
-                  Tidak dapat memaparkan PDF. 
-                  <a href="catalog.pdf" target="_blank" class="accent">Klik di sini untuk buka atau muat turun katalog.</a>
-                </p>
-              </object>
-            </div>
-            <div class="text-center">
-              <a href="catalog.pdf" class="btn btn-pran me-2" target="_blank" rel="noopener">📥 Muat Turun Katalog</a>
-              <a href="https://wa.me/60128169367?text=Hi%2C%20saya%20berminat%20dengan%20produk%20PRAN%20yang%20diedarkan%20oleh%20KOPUSAMAJU" 
-                 target="_blank" class="btn btn-whatsapp">
-                💬 Hubungi melalui WhatsApp
-              </a>
-            </div>
-          </div>
-
-          <!-- Section: Borang Akaun -->
-          <div class="text-start mt-5">
-            <h3 class="section-title">📝 Borang Buka Akaun dengan KOPUSAMAJU</h3>
-            <div class="pdf-viewer mb-3">
-              <object data="borang-akaun.pdf" type="application/pdf">
-                <p class="text-light text-center">
-                  Tidak dapat memaparkan PDF. 
-                  <a href="borang-akaun.pdf" target="_blank" class="accent">Klik di sini untuk buka atau muat turun borang akaun.</a>
-                </p>
-              </object>
-            </div>
-            <div class="text-center">
-              <a href="borang-akaun.pdf" class="btn btn-pran me-2" target="_blank" rel="noopener">📥 Muat Turun Borang Akaun</a>
-              <a href="https://wa.me/60128169367?text=Hi%2C%20saya%20ingin%20buka%20akaun%20dengan%20KOPUSAMAJU%20untuk%20produk%20PRAN" 
-                 target="_blank" class="btn btn-whatsapp">
-                📨 Hantar Permohonan Akaun
-              </a>
-            </div>
-          </div>
-
-          <footer class="mt-5">
-            <div>© 2025 KOPUSAMAJU Sabah Berhad | Ejen Rasmi PRAN Malaysia Timur</div>
-            <div><small>Laman ini tidak diindeks (noindex) dan hanya untuk pelanggan sah berdaftar.</small></div>
-          </footer>
-        </div>
-      </div>
+    <div id="pdf-container" class="pdf-viewer mb-4">
+      <iframe id="pdf-frame" src="catalog.pdf"></iframe>
     </div>
-  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <div id="pdf-fallback" class="d-none">
+      <a href="catalog.pdf" target="_blank" class="btn btn-warning btn-lg mb-3">
+        <i class="bi bi-file-earmark-pdf me-2"></i>Lihat PDF
+      </a>
+    </div>
+
+    <hr class="border-warning my-5">
+
+    <h4 class="fw-bold text-warning">📝 Borang Pembukaan Akaun</h4>
+    <p class="text-light mb-4">Isi borang untuk mendaftar akaun bersama Kopusamaju Sabah Berhad.</p>
+
+    <div id="pdf-container-form" class="pdf-viewer mb-4">
+      <iframe id="pdf-frame-form" src="borang-akaun.pdf"></iframe>
+    </div>
+
+    <div id="pdf-fallback-form" class="d-none">
+      <a href="borang-akaun.pdf" target="_blank" class="btn btn-warning btn-lg mb-3">
+        <i class="bi bi-file-earmark-pdf me-2"></i>Lihat Borang
+      </a>
+    </div>
+
+    <a href="https://wa.me/60128169367" target="_blank" class="btn btn-whatsapp btn-lg mt-4 shadow">
+      <i class="bi bi-whatsapp me-2"></i>Hubungi Kami di WhatsApp
+    </a>
+  </main>
+
+  <footer>
+    <p>© 2025 Kopusamaju Sabah Berhad | Ejen Rasmi PRAN</p>
+    <p class="mb-0 text-warning small">
+      Laman ini tidak diindeks (noindex) dan hanya untuk pelanggan sah berdaftar.
+    </p>
+  </footer>
+
+  <script>
+    function checkPDFViewSupport(iframeId, fallbackId, url) {
+      const iframe = document.getElementById(iframeId);
+      const fallback = document.getElementById(fallbackId);
+
+      // If on mobile OR PDF viewer blocked
+      const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+      setTimeout(() => {
+        const loaded = iframe.contentDocument && iframe.contentDocument.body && iframe.contentDocument.body.children.length > 0;
+        if (isMobile || !loaded) {
+          iframe.parentElement.classList.add("d-none");
+          fallback.classList.remove("d-none");
+          fallback.querySelector("a").href = url;
+        }
+      }, 2000);
+    }
+
+    // Apply check on both PDFs
+    window.onload = function() {
+      checkPDFViewSupport("pdf-frame", "pdf-fallback", "catalog.pdf");
+      checkPDFViewSupport("pdf-frame-form", "pdf-fallback-form", "borang-akaun.pdf");
+    };
+  </script>
 </body>
 </html>
