--- a/pran.html
+++ b/pran.html
@@ -1,18 +1,21 @@
 <!doctype html>
 <html lang="ms">
 <head>
-  <meta charset="utf-8" />
-  <meta name="robots" content="noindex, nofollow" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PRAN — Produk Import Berkualiti | Kopusamaju Sabah Berhad</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="https://images.seeklogo.com/logo-png/25/1/pran-logo-png_seeklogo-258211.png" sizes="32x32">
+  <link rel="icon" href="https://images.seeklogo.com/logo-png/25/1/pran-logo-png_seeklogo-258211.png">
 
   <!-- Bootstrap & Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
+  <!-- Lightbox -->
   <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet">
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
@@ -71,7 +74,7 @@
     .switch-panel {
       position: relative;
       min-height: 450px;
-      margin-bottom: 70px;
+      margin-bottom: 80px;
     }
     .panel-inner {
       opacity: 0;
@@ -95,17 +98,29 @@
       background: #fff;
       height: 70vh;
       min-height: 400px;
+      margin-bottom: 30px;
     }
     iframe, object {
       width: 100%;
       height: 100%;
       border: none;
+      display: block;
+    }
+
+    /* === RESPONSIVE FIX === */
+    @media (max-width: 768px) {
+      .pdf-box {
+        height: auto;
+        min-height: 400px;
+        aspect-ratio: 3 / 4;
+      }
     }
 
     /* Gallery */
     .gallery-title {
       text-align: center;
       margin-bottom: 25px;
+      color: var(--pran-red);
     }
     .gallery-item img {
       width: 100%;
@@ -131,103 +146,122 @@
 </head>
 <body>
 
-  <!-- Hero -->
+  <!-- HERO -->
   <section class="hero">
     <img src="https://images.seeklogo.com/logo-png/25/1/pran-logo-png_seeklogo-258211.png" alt="PRAN Logo">
     <h1>Produk Import Berkualiti — Diedarkan oleh Kopusamaju Sabah Berhad</h1>
-    <p>Ejen Rasmi PRAN Malaysia</p>
+    <p>Ejen rasmi PRAN untuk pasaran tempatan</p>
   </section>
 
-  <main class="container py-5">
+  <main class="container mt-4">
+
     <!-- Tabs -->
-    <div class="d-flex justify-content-center mb-4">
+    <div class="d-flex justify-content-center mb-3">
       <button class="tab-btn active" data-target="catalog">📘 Katalog</button>
       <button class="tab-btn" data-target="form">📄 Borang Akaun</button>
     </div>
 
-    <!-- PDF Switcher -->
+    <!-- Product images -->
+    <div class="d-flex justify-content-center flex-wrap gap-2 mb-4">
+      <img src="/pran/jus.png" alt="Jus PRAN" class="rounded shadow-sm" style="max-height:100px;">
+      <img src="/pran/minumankotak.png" alt="Minuman PRAN" class="rounded shadow-sm" style="max-height:100px;">
+      <img src="/pran/wafer.png" alt="Wafer PRAN" class="rounded shadow-sm" style="max-height:100px;">
+    </div>
+
+    <!-- Buttons -->
+    <div class="text-center mb-3">
+      <a href="https://wa.me/60128169367" target="_blank" class="btn btn-success">
+        <i class="bi bi-whatsapp me-2"></i>Hubungi Kami di WhatsApp
+      </a>
+      <a id="open-new-tab" class="btn btn-outline-secondary ms-2" target="_blank">Buka di Tab Baru</a>
+    </div>
+
+    <!-- PDF Sections -->
     <div class="switch-panel">
-      <!-- Catalog Panel -->
+      <!-- KATALOG -->
       <div id="panel-catalog" class="panel-inner show">
-        <h4 class="text-center fw-bold mb-3 text-danger">Katalog Produk PRAN</h4>
+        <h4 class="text-center mb-3 text-danger">Katalog Produk PRAN</h4>
         <div class="pdf-box">
           <iframe src="catalog.pdf" title="Katalog PRAN"></iframe>
         </div>
-        <div class="text-center mt-3">
-          <a href="catalog.pdf" class="btn btn-danger me-2" download><i class="bi bi-download me-1"></i>Muat Turun</a>
-          <a href="https://docs.google.com/gview?url=https://kienon.github.io/catalog.pdf&embedded=true" target="_blank" class="btn btn-outline-danger">👁️ Lihat di Google Viewer</a>
+        <div class="text-center">
+          <a href="catalog.pdf" class="btn btn-danger" download>📥 Muat Turun</a>
+          <a id="catalog-google" class="btn btn-outline-danger ms-2" target="_blank">👁️ Lihat di Google Viewer</a>
+        </div>
+
+        <!-- Gallery -->
+        <div class="gallery mt-5">
+          <h4 class="gallery-title fw-bold">Galeri Produk PRAN</h4>
+          <div class="row g-3">
+            <div class="col-md-4 col-6 gallery-item">
+              <a href="/pran/jus.png" class="glightbox" data-gallery="gallery-pran">
+                <img src="/pran/jus.png" alt="Jus PRAN">
+              </a>
+            </div>
+            <div class="col-md-4 col-6 gallery-item">
+              <a href="/pran/minumankotak.png" class="glightbox" data-gallery="gallery-pran">
+                <img src="/pran/minumankotak.png" alt="Kotak PRAN">
+              </a>
+            </div>
+            <div class="col-md-4 col-6 gallery-item">
+              <a href="/pran/wafer.png" class="glightbox" data-gallery="gallery-pran">
+                <img src="/pran/wafer.png" alt="Wafer PRAN">
+              </a>
+            </div>
+          </div>
         </div>
       </div>
 
-      <!-- Account Form Panel -->
+      <!-- BORANG -->
       <div id="panel-form" class="panel-inner">
-        <h4 class="text-center fw-bold mb-3 text-danger">Borang Buka Akaun Kopusamaju</h4>
+        <h4 class="text-center mb-3 text-danger">Borang Buka Akaun Kopusamaju</h4>
         <div class="pdf-box">
           <iframe src="borang-akaun.pdf" title="Borang Akaun"></iframe>
         </div>
-        <div class="text-center mt-3">
-          <a href="borang-akaun.pdf" class="btn btn-danger me-2" download><i class="bi bi-download me-1"></i>Muat Turun</a>
-          <a href="https://docs.google.com/gview?url=https://kienon.github.io/borang-akaun.pdf&embedded=true" target="_blank" class="btn btn-outline-danger">👁️ Lihat di Google Viewer</a>
+        <div class="text-center">
+          <a href="borang-akaun.pdf" class="btn btn-danger" download>📥 Muat Turun</a>
+          <a id="form-google" class="btn btn-outline-danger ms-2" target="_blank">👁️ Lihat di Google Viewer</a>
         </div>
       </div>
     </div>
-
-    <!-- WhatsApp -->
-    <div class="text-center mt-4">
-      <a href="https://wa.me/60128169367" target="_blank" class="btn btn-success btn-lg">
-        <i class="bi bi-whatsapp me-2"></i>Hubungi Kami di WhatsApp
-      </a>
-    </div>
-
-    <!-- Gallery -->
-    <section class="mt-5">
-      <h3 class="gallery-title fw-bold text-danger">Galeri Produk PRAN</h3>
-      <div class="row g-4">
-        <div class="col-md-4 gallery-item">
-          <a href="/pran/jus.png" class="glightbox" data-gallery="pran-gallery">
-            <img src="/pran/jus.png" alt="Jus PRAN">
-          </a>
-        </div>
-        <div class="col-md-4 gallery-item">
-          <a href="/pran/minumankotak.png" class="glightbox" data-gallery="pran-gallery">
-            <img src="/pran/minumankotak.png" alt="Minuman Kotak PRAN">
-          </a>
-        </div>
-        <div class="col-md-4 gallery-item">
-          <a href="/pran/wafer.png" class="glightbox" data-gallery="pran-gallery">
-            <img src="/pran/wafer.png" alt="Wafer PRAN">
-          </a>
-        </div>
-      </div>
-    </section>
   </main>
 
   <footer>
     <strong>Kopusamaju Sabah Berhad</strong> | Ejen Rasmi PRAN<br>
-    © <span id="year"></span> Kopusamaju Sabah Berhad. Semua Hak Cipta Terpelihara.
+    © <span id="year"></span> Kopusamaju Sabah Berhad.
   </footer>
 
-  <!-- JS -->
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
-
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
 
-    // Tab switching
     const tabs = document.querySelectorAll(".tab-btn");
     const panels = {
       catalog: document.getElementById("panel-catalog"),
-      form: document.getElementById("panel-form")
+      form: document.getElementById("panel-form"),
     };
+    const openNewTabBtn = document.getElementById("open-new-tab");
+
+    const catalogUrl = "catalog.pdf";
+    const formUrl = "borang-akaun.pdf";
+
+    document.getElementById("catalog-google").href =
+      "https://docs.google.com/gview?url=" + encodeURIComponent(location.origin + "/catalog.pdf") + "&embedded=true";
+    document.getElementById("form-google").href =
+      "https://docs.google.com/gview?url=" + encodeURIComponent(location.origin + "/borang-akaun.pdf") + "&embedded=true";
 
     function switchTo(target) {
       tabs.forEach(btn => btn.classList.toggle("active", btn.dataset.target === target));
-      Object.keys(panels).forEach(k => panels[k].classList.toggle("show", k === target));
+      Object.keys(panels).forEach(key => panels[key].classList.toggle("show", key === target));
+      openNewTabBtn.href = target === "catalog" ? catalogUrl : formUrl;
     }
-    tabs.forEach(btn => btn.addEventListener("click", () => switchTo(btn.dataset.target)));
 
-    // Init gallery lightbox
+    tabs.forEach(btn => btn.addEventListener("click", () => switchTo(btn.dataset.target)));
+    openNewTabBtn.href = catalogUrl;
+
+    // Lightbox init
     const lightbox = GLightbox({ selector: '.glightbox' });
   </script>
 </body>
