--- a/pran.html
+++ b/pran.html
@@ -182,10 +182,11 @@
     <div class="d-flex justify-content-center mb-3">
       <button class="tab-btn active" data-target="catalog">📘 Katalog</button>
       <button class="tab-btn" data-target="form">📄 Borang Akaun</button>
+      <a id="open-new-tab" class="tab-btn" target="_blank">Buka di Tab Baru</a>
       <a href="https://wa.me/60128169367" target="_blank" class="btn btn-success">
         <i class="bi bi-whatsapp me-2"></i>Hubungi Kami di WhatsApp
       </a>
-      <a id="open-new-tab" class="btn btn-outline-secondary ms-2" target="_blank">Buka di Tab Baru</a>
+      
     </div>
 
     <!-- PDF Sections -->
